<resources>
    <string name="app_name">Smart Pricing</string>
    <string name="again_press_exite_str">Press the return key to close the program again!</string>
    <string name="consumed_tab">消费查询</string>
    <string name="recharge_tab">充值</string>
    <string name="home_tab">无</string>
    <string name="DIYpackage_tab">DIY套餐</string>
    <string name="mine_tab">个人中心</string>
    <string name="tutorial_name">Smart Pricing,built for you</string>
    <string name="tutorial_context_one">In order for you to get the most out of the app and for us to to improve our services, we may use information from your device.</string>
    <string name="tutorial_context_two">Data such as your location, information about the quality and use of your communications services, apps on your device as well as how you use My Vodafone help us improve our service and tailor recommendations to you.You can change what information is collected and used, as well as control the way we communicate with you at any time by visiting settings.</string>
    <string name="tutorial_context_three">By tapping on \'OK\' you agree to allow Vodafone to collect your data and agree to our&#160;</string>
    <string name="tutorial_context_four">Privacy policy</string>
    <string name="tutorial_context_five">&#160;and&#160;</string>
    <string name="tutorial_context_six">T&#038;C\'s.</string>
    <string name="cancle_btn">Cancle</string>
    <string name="ok_btn">Ok</string>
    <string name="login_name_one">Login to</string>
    <string name="login_name_two">Smart Pricing</string>
    <string name="login_user_name">Username</string>
    <string name="hint_user_name">e.g.jhon_lewis88</string>
    <string name="login_Password">Password</string>
    <string name="hint_Password">Your saved password</string>
    <string name="login_btn">Log in</string>
    <string name="pwd_error">You typed an invalid password</string>
    <string name="enter_five_error">Sorry your account is now locked. You\'ve entered your details incorrectly more than 5 times. You will need to reset your account.</string>
    <string name="reset_account_btn">Reset your account now</string>
    <string name="forgotten_btn">Forgotten password</string>
    <string name="login_name_three">Not registered with</string>
    <string name="login_name_four">Smart Pricing?</string>
    <string name="register_btn">Register now</string>
    <string name="forgtten_title">Reset the password</string>
    <string name="confim_pwd">Confirm password</string>
    <string name="check">check</string>
    <string name="new_pwd">New password</string>
    <string name="send_code">send code</string>
    <string name="enter_code">Enter code</string>
    <string name="your_number">Enter your Number</string>
    <string name="tip_next">Next tip</string>
    <string name="tip_start">Get started</string>
    <string name="tip_close">Close</string>
    <string name="tip_one_one">Tip 1 of 4</string>
    <string name="tip_one_two">Good morning,Alice</string>
    <string name="tip_one_three">Welcome to My Vodafone</string>
    <string name="tip_one_four">No data spend</string>
    <string name="tip_one_five">When using this app,you won\'t spend any of your data allowance.</string>
    <string name="tip_two_one">Tip 2 of 4</string>
    <string name="tip_two_onee">Tip 3 of 4</string>
    <string name="tip_two_oneee">Tip 4 of 4</string>
    <string name="tip_two_two">Service switcher</string>
    <string name="tip_two_three">If you have more than one service on your account you can tap the service switcher to choose another.Your can also use the side menu to access your services(top right).</string>
    <string name="tip_three_one">Usage dial</string>
    <string name="tip_three_two">The dial shows your usage.You can switch between data,calls &#038; texts.Tap the + sign to add more data or minutes.</string>
    <string name="tip_four_one">Current spend</string>
    <string name="tip_four_two">Finally,to see your current spend and view your bills you should take a look at the bottom of the screen.</string>
    <string name="terms">Terms&#038;Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="argee_title">©Copyright 2015 My Vodafone 5.0.1</string>
    <string name="argee_context">1. Licence</string>
    <string name="argee_context1">Lorem ipsum dolor sit amet, consect etur adipiscing elit. Integer sit amet iaculis justo. Integer vestibulum.</string>
    <string name="argee_context2">2. Charges</string>
    <string name="argee_context3">When using this app you will not spend any of your data allowance.</string>
    <string name="argee_context4">3. Exclusion of warranties and</string>
    <string name="argee_context44">limitation of liability</string>
    <string name="argee_context5">Aliquam lobortis rhoncus elit ac max imus. Nam vestibulum ipsum ut ligula lacinia, condimentum scelerisque dui.</string>
    <string name="argee_context6">4. Lorem ipsum</string>
    <string name="argee_context7">Aliquam lobortis rhoncus elit ac max imus. Nam vestibulum ipsum ut ligula lacinia, condimentum scelerisque dui.</string>
    <string name="argee_context8">5. Lorem ipsum</string>
    <string name="argee_context9">Aliquam lobortis rhoncus elit ac max imus. </string>
    <string name="privacy_context0">1. How Vodafone will use the information</string>
    <string name="privacy_context00">collected (or shared)</string>
    <string name="privacy_context1">The purpose of collecting this information is to help improve Vodafone networks and services. We analyse the collected information to diagnose connectivity, coverage or connection quality problems, understand connectivity needs from the usage of mobile data, Wi-Fi and applications, and use such insights to make improvements to our network and services.</string>
    <string name="privacy_context2">The collected information helps us understand, for example, where are the areas of weak coverage so that we can improve it, to determine whether poor performance might be caused by the movement of the device in a certain direction or due to some other reason, such as device type or the battery state or application usage. Through the collected information we understand better how to improve device and network data efficiency, how different device types,applications and Wifi and mobile usage patterns impact data volumes and we evaluate the performance of different devices in our network and diagnose phone related problems as well as other such uses.</string>
    <string name="privacy_context3">We do not sell or share the collected information with other third parties than those who process this information on our behalf.</string>
    <string name="privacy_context4">2. Some basic privacy facts</string>
    <string name="privacy_context41">•  numbers you dial or that dial you</string>
    <string name="privacy_context42">•  any content of your communications</string>
    <string name="privacy_context43">•  content, sender or receiver information of</string>
    <string name="privacy_context433">text messages on your device</string>
    <string name="privacy_context431">•  the names of the Wi-Fi hot spots used. </string>
    <string name="privacy_context432">All personal identifiers are removed in the app before sending to Vodafone and we process the collected information anonymously. We do not intend to use the information to identify you or any other person personally and we have in place appropriate technical and organizational measures to prevent such from happening.</string>
    <string name="privacy_context5">3. Coverage, connectivity and data usage</string>
    <string name="privacy_context51">Vodafone will capture statistics about network connectivity and quality for phone calls, internet and data services as well as statistics about how much your device uses internet services and consumes data, such as:</string>
    <string name="privacy_context511">•  the percentage of time your phone is on the network</string>
    <string name="privacy_context512">•  signal strength</string>
    <string name="privacy_context513">•  areas of limited or no service</string>
    <string name="privacy_context514">•  quality of the coverage (2G, 3G, 4G)</string>
    <string name="privacy_context515">•  call duration</string>
    <string name="privacy_context516">•  how the call ends</string>
    <string name="privacy_context517">•  every hour, a test of whether you can </string>
    <string name="privacy_context5110"> connect to the internet </string>
    <string name="privacy_context518">•  your upload and download speed</string>
    <string name="privacy_context519">•  how long it takes to set up a connection </string>
    <string name="privacy_context5111"> to the internet</string>
    <string name="privacy_context5112">•  Wi-Fi connection quality and MAC addresses </string>
    <string name="privacy_context5113">of the Wi-Fi hot spots your device can see,  </string>
    <string name="privacy_context5114">and how congested they are</string>
    <string name="privacy_context5115">•  hourly data use</string>
    <string name="privacy_context5116">•  how much data your phone uses when </string>
    <string name="privacy_context5117">it\'s in standby mode </string>
    <string name="privacy_context5118">•  how much data goes over Wi-Fi </string>
    <string name="privacy_context5119">connections vs. the cellular network </string>
    <string name="privacy_context6">4. Applications</string>
    <string name="privacy_context61">Vodafone will capture statistics about the use of applications on your phone, such as: </string>
    <string name="privacy_context611">•  what apps are installed on your phone</string>
    <string name="privacy_context612">•  what apps are started each day</string>
    <string name="privacy_context613">•  how long they are used</string>
    <string name="privacy_context614">•  how much data and how fast each app </string>
    <string name="privacy_context615">receives and transmits </string>
    <string name="privacy_context7">5. Device Information</string>
    <string name="privacy_context71">Vodafone will capture technical information about your device, such as:</string>
    <string name="privacy_context712">•  phone brand and model</string>
    <string name="privacy_context713">•  operating system</string>
    <string name="privacy_context714">•  firmware version</string>
    <string name="privacy_context715">•  hardware capabilities</string>
    <string name="privacy_context716">•  language and locale</string>
    <string name="privacy_context717">•  battery state</string>
    <string name="privacy_context718">•  memory consumption</string>
    <string name="privacy_context719">•  time since last reboot</string>
    <string name="privacy_context81">6. Location</string>
    <string name="privacy_context82">When we measure the items above related to coverage and usage, we know your rough location from the phone mast and Wi-Fi hot spot your phone is using. hen your phone or one of your apps is using GPS location data, we use that to assess location more precisely and sometimes your speed and direction of travel if available with GPS information.</string>
    <string name="add_text">Based on your current spend we think a 1GB data add-on should keep you going until your allowance renews next month.</string>
    <string name="no_thanks">No, thanks</string>
    <string name="browse_all_extras">Browse all extras</string>
    <string name="congratulationstext">You have signed in for 10 consecutive days,and <b>100 loyalty points</b> are rewarded to you.</string>
    <string name="loyalty_points">loyalty points</string>
    <string name="dialog_exchange">Redeem your points</string>
    <string name="dialog_got">OK, I got it</string>
    <string name="settings_sim3">SIM</string>
    <string name="settings_PIN">PIN</string>
    <string name="settings_PUK_NO">PUK no</string>
</resources>